<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="@color/colorBar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="64dp">
                <ImageButton
                    android:id="@+id/imageButton_back"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="#00000000"
                    app:srcCompat="@drawable/back" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ActionBar_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:textSize="20dp"
                    android:text="@string/setting_title" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:text="@string/test"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/setting_Explanation" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:text="@string/setting_choose_language"
            />
        <RadioGroup
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@+id/button1"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/RadioButton_System"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/system"/>
            <RadioButton
                android:id="@+id/RadioButton_Chinese"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/chinese"/>
            <RadioButton
                android:id="@+id/RadioButton_English"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/english"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/range"
            android:textSize="20dp"
            />
        <RadioGroup
            android:id="@+id/range"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@+id/button2"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/RadioButton_Big"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/big"/>
            <RadioButton
                android:id="@+id/RadioButton_Mid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/middle"/>
            <RadioButton
                android:id="@+id/RadioButton_Small"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/smaill"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:text="@string/report"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/report_explanation"
            />
        <Button
            android:layout_gravity="center"
            android:id="@+id/Button_A"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/report"
            />
    </LinearLayout>

</ScrollView>