<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hk.edu.ouhk.android.assignment.about">
    <LinearLayout
        android:background="@color/colorBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="64dp">
            <ImageButton
                android:id="@+id/imageButton_back"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="#00000000"
                app:srcCompat="@drawable/back" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="8"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center"
                android:id="@+id/ActionBar_TextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textSize="20dp"
                android:text="@string/about_title"
                android:layout_weight="8"
                />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textSize="20dp"
                android:text="@string/about_area"
                />
            <TextView
                android:id="@+id/TextView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="=TextView"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="20dp"
                    android:text="@string/about_Nearby_areas"
                    />
                <ImageButton
                    android:id="@+id/ImageButton_Area"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="#00000000"
                    app:srcCompat="@drawable/more" />
            </LinearLayout>
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:divider="#0000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="20dp"
                    android:text="@string/about_Nearby_street"
                    />
                <ImageButton
                    android:id="@+id/image_B"
                    android:layout_width="64dp"
                    android:background="#00000000"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/more" />
            </LinearLayout>
            <ListView
                android:id="@+id/list2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:divider="#0000"/>
            <TextView
                android:layout_weight="5"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/about_other_detail"
                android:id="@+id/TextView1"
                />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_Your_Location"
        android:id="@+id/location"/>

</LinearLayout>
